@@ -6,6 +6,9 @@ this repository contains the full copyright notices and license terms. -->
     <field name="name"/>
     <label name="parent"/>
     <field name="parent"/>
+    <group colspan="4" col="20" id="checkboxes">
+        <!-- Add here some checkboxes ! -->
+    </group>
     <label name="rec_name"/>
     <field name="rec_name" colspan="3"/>
     <notebook colspan="4">
