@@ -2,6 +2,6 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree string="Product Categories">
-    <field name="name"/>
     <field name="rec_name"/>
+    <field name="name" tree_invisible="1"/>
 </tree>
