@@ -6,7 +6,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="list_price"/>
     <field name="cost_price"/>
     <field name="type"/>
-    <field name="category"/>
     <field name="default_uom"/>
     <field name="active" tree_invisible="1"/>
 </tree>
